--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,17 +1,18 @@
 {
   "name": "extraction",
   "version": "0.1.0",
-  "sources": {
+  "sources": [{
     "dir" : "src",
     "subdirs" : true
-  },
+  }
+    ], 
   "package-specs": {
     "module": "commonjs",
     "in-source": true
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
-
+    
   ],
   "warnings": {
     "error" : "+101"
